@@ -1,3 +1,10 @@
+2000-02-03  Jim Meyering  <meyering@lucent.com>
+
+	* tests/mv/Makefile.am (TESTS): Add dir-file.
+	(TESTS_ENVIRONMENT): Remove vestiges of old tests.
+
+	* tests/mv/dir-file: New file.
+
 2000-02-02  Jim Meyering  <meyering@lucent.com>
 
 	* tests/touch/Makefile.am (TESTS): Add fifo.
